--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "openai": "^4.80.1",
     "telegraf": "^4.16.3",
     "zod": "^3.22.4"
   },
