--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "openai": "^4.80.1",
+    "pg": "^8.13.1",
     "telegraf": "^4.16.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.4",
+    "@types/pg": "^8.11.11",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
